# React-Venn-Diagram-Modul

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  README.md  VENN-DIAGRAM-SVG-SPECIFICATION.md  VENN-DIGARAM-PROJECT-STRUCTURE.md  generate_region_json.py  generate_tests.py  index.html  package-lock.json  package.json  rotate_labels.py  svg_center_texts.py  svg_generate_tests.py  svg_normalize_after_illustrator.py  svg_rotate_labels.py  tsconfig.app.json  vite.config.ts
.github/workflows/: python-notebook-test.yml  python-publish.yml  python-test.yml  r-bioc-check.yml  r-mirror-sync.yml  r-pkgdown.yml
data/: c5.go.mf.v2026.1.Hs.symbols.gmt  dataset_streaming_platforms.csv  generate_binary_tsv.py  generate_cancer_drivers_tsv.py
editor/: index.html  package.json
editor/src/: App.tsx  editor.css  main.tsx  types.ts
models/json/: venn-2e-set-carroll-triangle.json  venn-2e-set-rectangle.json  venn-5e-set-euler.json  venn-8a-set-edwards.json  venn-9a-set-edwards.json
python/: CHANGELOG.md  LICENSE  README.md  RELEASE.md  pyproject.toml
python/docs/: USER_GUIDE.md
python/examples/: 04_upset_vs_venn_vs_network.ipynb  05_statistics_deep_dive.ipynb  06_pipeline_integration.ipynb  08_custom_styling_and_export.ipynb  09_cli_workflows.ipynb  10_enrichment_plots_comparison.ipynb  12_region_accessors_and_dsl.ipynb  README.md
python/scripts/notebooks/: _build_04_upset_vs_venn_vs_network.py  _build_05_statistics_deep_dive.py  _build_08_custom_styling_and_export.py  _build_12_region_accessors_and_dsl.py
python/src/venn_diagram_lab/: __init__.py  analysis.py  cli.py  cluster.py  errors.py  io.py  proportional.py  region_accessors.py  region_expression.py  samples.py  share_distribution.py  statistics.py  version.py
python/src/venn_diagram_lab/cli/: __init__.py  _data.py  _export.py  _meta.py  _render.py  _workflow.py
python/src/venn_diagram_lab/render/: __init__.py  cluster_heatmap_mpl.py  image.py  network.py  pdf.py  share_distribution_mpl.py  svg.py  svg_items.py  upset.py  venn_mpl.py
python/tests/: test_cli_common.py  test_cli_data.py  test_cli_data_items.py  test_cli_data_regions.py  test_cli_export.py  test_cli_meta.py  test_cli_render.py  test_cli_render_backends.py  test_cli_workflow.py  test_cluster.py  test_parity_with_r_phase11.py  test_parity_with_webtool_v222.py  test_phase11_integration.py  test_public_api.py  test_region_accessors.py  test_region_expression.py  test_render_cluster_heatmap_mpl.py  test_render_network.py  test_render_share_distribution.py  test_render_share_distribution_mpl.py  test_render_svg.py  test_render_svg_highlight.py  test_render_svg_items.py  test_render_svg_repr.py  test_render_upset.py  test_render_venn_mpl.py  test_share_distribution.py  test_smoke.py
python/tests/fixtures/expected/: cluster_order_4set.json  share_distribution_4set.json
r/: .Rbuildignore  404.html  DESCRIPTION  LICENSE-text.html  LICENSE-text.md  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  README.md  RELEASE.html  RELEASE.md  _pkgdown.yml  authors.html  authors.md  cran-comments.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
r/R/: analysis.R  broom-tidy.R  classes.R  enrichment-plot-helpers.R  errors.R  excel-workbook.R  ggplot-layer.R  io.R  proportional.R  region-accessors.R  region-expression.R  render-enrichment-bar.R  render-enrichment-lollipop.R  render-pdf.R  render-svg-items.R  render-svg.R  render-upset.R  samples.R  statistics.R  tsv-export.R  zip-report.R  zzz.R
r/articles/: index.html  index.md  v01_quickstart.html  v01_quickstart.md  v02_real_cancer_drivers.html  v02_real_cancer_drivers.md  v07_pdf_reports.html  (+11 more)
scripts/: dump_expected_fixtures.ts
src/: App.tsx  editor.css  models.ts  types.ts  version.ts
(+254 files in other folders)
