[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "venn-diagram-lab"
dynamic = ["version"]
description = "Headless Venn diagram analysis and rendering — companion to the Venn Diagram Lab web tool."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Zoltán Dul", email = "ssdbtc@gmail.com" },
]
keywords = ["venn", "diagram", "set", "intersection", "bioinformatics", "visualization", "upset"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "shapely>=2.0",
    "matplotlib>=3.8",
    "networkx>=3.0",
    "lxml>=5.0",
    "cairosvg>=2.7",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "ipykernel>=6.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "nbconvert>=7.0",
    "nbformat>=5.0",
    "build>=1.2",
    "twine>=5.0",
]

[project.scripts]
vdl = "venn_diagram_lab.cli:app"

[project.urls]
Homepage = "https://github.com/ZoliQua/Venn-Diagram-Lab"
Documentation = "https://github.com/ZoliQua/Venn-Diagram-Lab/tree/main/python#readme"
Repository = "https://github.com/ZoliQua/Venn-Diagram-Lab"
Changelog = "https://github.com/ZoliQua/Venn-Diagram-Lab/blob/main/python/CHANGELOG.md"
Issues = "https://github.com/ZoliQua/Venn-Diagram-Lab/issues"

[tool.hatch.version]
path = "src/venn_diagram_lab/version.py"

[tool.hatch.build]
# `_data/` is gitignored (populated by `python python/scripts/sync_data.py` from
# the React side: `models/svg/`, `models/json/`, `data/*.{csv,tsv}`). Mark it as
# a build artifact so both the wheel and sdist include the populated tree.
# Run sync_data.py before `python -m build` (CI does this automatically).
artifacts = [
    "src/venn_diagram_lab/_data/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/venn_diagram_lab"]

[tool.hatch.build.targets.sdist]
include = [
    "src/venn_diagram_lab",
    "tests",
    "scripts",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "RELEASE.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (notebook execution); run with `pytest -m slow`",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "PL", "RUF"]
ignore = ["PLR0913"]  # too many arguments in function definition (acceptable for render APIs)

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true  # cairosvg, shapely, networkx may lack stubs
exclude = ["/_data/"]  # gitignored, generated at build/dev time

[[tool.mypy.overrides]]
# pandas and scipy ship no inline types and have no bundled stubs;
# pandas-stubs / scipy-stubs are separate optional packages.
# follow_imports = "skip" suppresses import-untyped for these modules only.
module = ["pandas", "pandas.*", "scipy", "scipy.*"]
ignore_missing_imports = true
follow_imports = "skip"
